 - New API: Macie
 - New API: DLM
 - New API: Signer
 - New API: Chime
 - New API: PinpointEmail
 - New API: S3Control
 - New API: PinpointSMSVoice
 - New API: RAM
 - New API: Route53Resolver
 - New API: RDSData
 - New API: Quicksight
 - New API: Amplify
 - New API: Datasync
 - New API: Robomaker
 - New API: Transfer
 - New API: GlobalAccelerator

0.38 19 Jun 2018
 - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
 - API updates for any service up to the date of release

0.37 13 Jun 2018
 - Big refactor of all result handling for all services
 - Support for credential_process in credential handlers
   https://docs.aws.amazon.com/cli/latest/topic/config-vars.html#sourcing-credentials-from-external-processes
 - Better docu generation (osoriano)
 - Documentation update: Now POD contains links from the botocore documentation in services and methods
 - Bump XML::Simple dependency to 2.21 (mla)
 - Documentation improvement: Link back to Service class from method parameters classes (castaway)
 - Documentation improvement: New way of rendering parameters to methods (avoids very long method signatures in TOCs). This
   also fixes the fact that search.cpan.org didn't like very long lines in its TOC, so was not putting some methods in the
   TOC (castaway)
 - Documentation improvement: Synopsis for methods now has relevant examples for each method call with hints about the size of parameters, if they're optional, etc. (castaway)
 - Json services will now return the code of the exception as the message of the exception if no message was found (instead
   of 'unrecognized error format')
 - Some services were signing requests with the incorrect strings. Pricing, Opsworks, MarketplaceMetering, MarketplaceEntitlement,
   MarketplaceCommerceAnalytics, DynamoDBStreams, CloudHSMv2, ApplicationAutoScaling and AutoScalingPlans now sign correctly. (autarch)
 - New API: EKS
 - New API: Neptune
 - New API: MediaTailor
 - New API: Pricing