@@ -37,6 +37,7 @@ package Paws::API::ServiceToClass;
    'cognito-idp' => 'CognitoIdp',
    'cognito-sync' => 'CognitoSync',
     comprehend => 'Comprehend',
+    comprehendmedical => 'ComprehendMedical',
     config => 'Config',
     connect => 'Connect',
     cur => 'CUR',
@@ -72,6 +73,7 @@ package Paws::API::ServiceToClass;
     events => 'CloudWatchEvents',
     firehose => 'Firehose',
     fms => 'FMS',
+    fsx => 'FSX',
     gamelift => 'GameLift',
     glacier => 'Glacier',
     globalaccelerator => 'GlobalAccelerator',
@@ -90,6 +92,7 @@ package Paws::API::ServiceToClass;
     importexport => 'ImportExport',
     kinesis => 'Kinesis',
     kinesisanalytics => 'KinesisAnalytics',
+    kinesisanalyticsv2 => 'KinesisAnalyticsV2',
     kinesisvideo => 'KinesisVideo',
    'kinesis-video-archived-media' => 'KinesisVideoArchivedMedia',
    'kinesis-video-media' => 'KinesisVideoMedia',
@@ -103,6 +106,7 @@ package Paws::API::ServiceToClass;
     macie => 'Macie',
     marketplacecommerceanalytics => 'MarketplaceCommerceAnalytics',
    'marketplace-entitlement' => 'MarketplaceEntitlement',
+    mediaconnect => 'MediaConnect',
     mediaconvert => 'MediaConvert',
     medialive => 'MediaLive',
     mediapackage => 'MediaPackage',
@@ -142,6 +146,7 @@ package Paws::API::ServiceToClass;
     sagemaker => 'SageMaker',
    'sagemaker-runtime' => 'SageMakerRuntime',
     secretsmanager => 'SecretsManager',
+    securityhub => 'SecurityHub',
     ses => 'SES',
     servicecatalog => 'ServiceCatalog',
     serverlessrepo => 'ServerlessRepo',
