@@ -19,6 +19,11 @@
  - New API: Robomaker
  - New API: Transfer
  - New API: GlobalAccelerator
+ - New API: ComprehendMedical
+ - New API: FSX
+ - New API: KinesisAnalyticsV2
+ - New API: MediaConnect
+ - New API: SecurityHub
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
